fix: make modern lint pass